<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.bosanskilonac</groupId>
  <artifactId>bosanski-lonac</artifactId>
  <name>bosanski-lonac</name>
  <description>Aplikacija projekta Bosanski Lonac.</description>
  <version>0.5-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <spring.framework>5.2.13.RELEASE</spring.framework>
    <spring.web>5.2.13.RELEASE</spring.web>
  </properties>
  
  <dependencies>
  	<!-- BL-Core -->
  	<dependency>
  		<groupId>com.bosanskilonac</groupId>
  		<artifactId>core</artifactId>
  		<version>1.0</version>
 	</dependency>
 	<!-- JavaFX -->
 	<dependency>
    	<groupId>org.openjfx</groupId>
    	<artifactId>javafx-controls</artifactId>
    	<version>16</version>
	</dependency>
	<!-- Additional GUI components (RangeSlider) -->
	<dependency>
		<groupId>org.controlsfx</groupId>
		<artifactId>controlsfx</artifactId>
		<version>11.1.0</version>
	</dependency>
  </dependencies>
  
  <build>
    <finalName>bosanski-lonac</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.5</version>
        <configuration>
          <options>
              <option>--add-exports</option>
              <option>javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls</option>
              <option>--add-exports</option>
              <option>javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls</option>
              <option>--add-exports</option>
              <option>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
          </options>
          <mainClass>app.Main</mainClass>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>app.PackageMain</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>